--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,20 +14,50 @@
         Height="{Binding AppState.WindowHeight, Mode=TwoWay}"
         Left="{Binding AppState.WindowX, Mode=TwoWay}"
         Top="{Binding AppState.WindowY, Mode=TwoWay}">
+    
+    <!--<Window.DataContext>
+        <vm:BrowserViewModel />
+    </Window.DataContext>-->
 
     <DockPanel>
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="4">
-            <Button Content="◀ Back" Command="{Binding GoBackCommand}" Margin="0,0,4,0"/>
-            <Button Content="▶ Forward" Command="{Binding GoForwardCommand}" Margin="0,0,4,0"/>
-            <Button Content="⟳ Reload" Command="{Binding ReloadCommand}" Margin="0,0,4,0"/>
+        <!-- Script panel on the left -->
+        <Grid DockPanel.Dock="Left" Width="300">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-            <TextBox Width="500" Text="{Binding Url, UpdateSourceTrigger=PropertyChanged}" Margin="8,0,4,0"/>
-            <Button Content="Go" Command="{Binding GoCommand}" />
-        </StackPanel>
-        <StackPanel>
-            <Label Content="{Binding AppState.WindowWidth}"/>
-            <Label Content="{Binding AppState.WindowHeight}" Margin="50 0 0 0"/>
-        </StackPanel>
-        <cefSharp:ChromiumWebBrowser x:Name="Browser" DockPanel.Dock="Bottom" />
+            <StackPanel Margin="4">
+                <TextBlock Text="Script Key:"/>
+                <TextBox Text="{Binding ScriptKey, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Text="JavaScript:" Margin="0,10,0,0"/>
+                <TextBox Text="{Binding ScriptText, UpdateSourceTrigger=PropertyChanged}" AcceptsReturn="True" Height="100" />
+
+                <Button Content="Run" Command="{Binding RunScriptCommand}" Margin="0,5,0,0" />
+
+                <TextBlock Text="Result:" Margin="0,10,0,0" />
+                <TextBox Text="{Binding ScriptResult}" AcceptsReturn="True" Height="100" IsReadOnly="True" />
+
+                <Button Content="Execute Backend" Command="{Binding ExecuteScriptCommand}" Margin="0,10,0,0" />
+            </StackPanel>
+        </Grid>
+
+        <!-- Main content -->
+        <Grid>
+            <DockPanel>
+                <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="4">
+                    <Button Content="◀ Back" Command="{Binding GoBackCommand}" Margin="0,0,4,0"/>
+                    <Button Content="▶ Forward" Command="{Binding GoForwardCommand}" Margin="0,0,4,0"/>
+                    <Button Content="⟳ Reload" Command="{Binding ReloadCommand}" Margin="0,0,4,0"/>
+
+                    <TextBox Width="500" Text="{Binding Url, UpdateSourceTrigger=PropertyChanged}" Margin="8,0,4,0"/>
+                    <Button Content="Go" Command="{Binding GoCommand}" />
+                </StackPanel>
+                <cefSharp:ChromiumWebBrowser x:Name="Browser" DockPanel.Dock="Bottom" />
+            </DockPanel>
+        </Grid>
     </DockPanel>
 </Window>
