--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="ManualWebScraper.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ManualWebScraper"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:ManualWebScraper">
     <Application.Resources>
          
     </Application.Resources>
