feat: now fetching the filename and url of the full gary zip

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,10 +14,11 @@
         Height="{Binding AppState.WindowHeight, Mode=TwoWay}"
         Left="{Binding AppState.WindowX, Mode=TwoWay}"
         Top="{Binding AppState.WindowY, Mode=TwoWay}">
-    
+    <!--d:DataContext="{d:DesignInstance Type=vm:BrowserViewModel}"-->
     <!--<Window.DataContext>
         <vm:BrowserViewModel />
-    </Window.DataContext>-->
+    </Window.DataContext>
+    <DataTemplate DataType="{x:Type vm:ScriptPanelViewModel}">-->
 
     <DockPanel>
         <!-- Left sidebar -->
@@ -54,7 +55,7 @@
                     <TextBox Width="500" Text="{Binding Url, UpdateSourceTrigger=PropertyChanged}" Margin="8,0,4,0"/>
                     <Button Content="Go" Command="{Binding GoCommand}" />
                 </StackPanel>
-                <cefSharp:ChromiumWebBrowser x:Name="Browser" DockPanel.Dock="Bottom" Address="{Binding Url}" />
+                <cefSharp:ChromiumWebBrowser x:Name="Browser" DockPanel.Dock="Bottom" Address="{Binding Url, Mode=OneWay}" />
             </DockPanel>
         </Grid>
     </DockPanel>
